# sequencer

./: .gitignore  .prettierignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md  additional benches  index.html  jsr.json  optimization_instruction.txt  package-lock.json  package.json  playwright.config.ts  sample.js  test.js  tsconfig.json  tsdown.config.ts
.c8/: coverage-10028-1775563639436-0.json  coverage-13156-1775501918913-0.json  coverage-15532-1775565232365-0.json  coverage-18160-1775565232051-0.json  coverage-26112-1775501918612-0.json  coverage-8624-1775563639980-0.json
.claude/: settings.local.json
.coverage-debug/: coverage-18840-1775757346388-0.json
.github/workflows/: ci.inactive  ci.yaml
.skills/optimize-performance/: SKILL.md
benchmark/: _prof-delete.mjs  _prof-merge.mjs  _prof2.mjs  bench-batch.js  bench-convergence.js  bench-delete.js  bench-forked.js  bench-latency.js  bench-merge.js  bench-profile.js  bench-snapshot.js  bench-workload-latency.js  bench.js  definitions.js  runner.js
docs/: hierarchy.html  index.html  modules.html
examples/: consumer.json  runtime.js  snapshot.json
scripts/: update-readme.mjs
src/: index.ts
src/.types/: type.ts  (+1 more)
test/: INVARIANTS.md  run-coverage.mjs
wasm/: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  package-lock.json  package.json  prompt.txt  tsconfig.json
wasm/include/crlist_wasm/: version.hpp
wasm/src/: Cargo.toml  lib.rs  main.cpp
wasm/src/crud/read/: module.cpp
wasm/src/helpers/: index.cpp  index.hpp  key.hpp
wasm/src/helpers/absolute_distance/: index.hpp
wasm/src/helpers/allocate_frame/: index.hpp
wasm/src/helpers/allocate_strip/: index.hpp
wasm/src/helpers/clip_strip_at_offset/: index.hpp
wasm/src/helpers/compare_timecode/: index.hpp
wasm/src/helpers/current_frame_contains_target/: index.hpp
wasm/src/helpers/current_strip_contains_target/: index.hpp
wasm/src/helpers/current_strip_contains_target_position/: index.hpp
wasm/src/helpers/current_strip_contains_timecode/: index.hpp
wasm/src/helpers/find_frame_by_index/: index.hpp
wasm/src/helpers/find_frame_by_timestamp/: index.hpp
wasm/src/helpers/find_frame_index_by_timestamp/: index.hpp
wasm/src/helpers/find_strip_by_position/: index.hpp
wasm/src/helpers/find_strip_by_target_position/: index.hpp
wasm/src/helpers/find_strip_by_timecode/: index.hpp
wasm/src/helpers/find_strip_start_position_by_timecode/: index.hpp
wasm/src/helpers/find_target_frame/: index.hpp
wasm/src/helpers/find_target_range/: index.hpp
wasm/src/helpers/run_backward/: index.hpp
wasm/src/helpers/run_forward/: index.hpp
wasm/src/helpers/splice_strip/: index.hpp
wasm/src/helpers/timecode_is_within_strip/: index.hpp
wasm/src/helpers/virtualize_frame/: index.hpp
wasm/src/types/: mod.rs  type.hpp  types.hpp
wasm/test/: index.js  smoke.mjs
(+255 files in other folders)
